Project elearning_ai {
  database_type: "MySQL"
  Note: "He thong E-Learning tich hop AI"
}

Table roles {
  id int [pk, increment]
  role_name varchar(50) [not null, unique]
}

Table users {
  id int [pk, increment]
  full_name varchar(100) [not null]
  email varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  role_id int [not null]
  status varchar(20) [not null, default: 'active']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table courses {
  id int [pk, increment]
  title varchar(200) [not null]
  description text
  thumbnail_url varchar(500)
  intro_video_url varchar(500)
  short_description varchar(300)
  price decimal(12,2) [not null, default: 0]
  lecturer_id int [not null]
  status varchar(20) [not null, default: 'draft']
  duration_days int [note: "NULL la khoa hoc khong gioi han"]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table payments {
  id int [pk, increment]
  user_id int [not null]
  course_id int
  total_amount decimal(12,2) [not null]
  payment_method varchar(50) [not null]
  payment_status varchar(20) [not null, default: 'pending']
  paid_at datetime
}

Table vouchers {
  id int [pk, increment]
  name varchar(150) [not null]
  code varchar(50) [not null, unique]
  mode varchar(30) [not null]
  description text
  status varchar(20) [not null, default: 'active']
  min_order_amount decimal(12,2)
  new_student_days int
  starts_at datetime
  ends_at datetime
  created_by int
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table voucher_courses {
  id int [pk, increment]
  voucher_id int [not null]
  course_id int [not null]
  discount_percent decimal(5,2) [not null]
  max_discount_amount decimal(12,2)
  active tinyint [not null, default: 1]

  indexes {
    (voucher_id, course_id) [unique]
  }
}

Table voucher_usages {
  id int [pk, increment]
  voucher_id int [not null]
  payment_id int [not null, unique]
  user_id int [not null]
  course_id int [not null]
  discount_percent decimal(5,2) [not null]
  original_amount decimal(12,2) [not null]
  discount_amount decimal(12,2) [not null]
  final_amount decimal(12,2) [not null]
  used_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table enrollments {
  id int [pk, increment]
  user_id int [not null]
  course_id int [not null]
  payment_id int
  enrolled_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  access_status varchar(20) [not null, default: 'pending']
  expires_at datetime
  is_preserved tinyint [not null, default: 0]
  preserved_at datetime

  indexes {
    (user_id, course_id) [unique]
  }
}

Table course_sections {
  id int [pk, increment]
  course_id int [not null]
  title varchar(200) [not null]
  description text
  section_order int [not null]
  is_preview tinyint [not null, default: 0]

  indexes {
    (course_id, section_order) [unique]
  }
}

Table lessons {
  id int [pk, increment]
  course_id int [not null]
  section_id int [not null]
  title varchar(200) [not null]
  content longtext
  video_url varchar(500)
  duration_seconds int
  is_preview tinyint [not null, default: 0]
  status varchar(20) [not null, default: 'active']
  lesson_order int [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    course_id
    (section_id, lesson_order) [unique]
  }
}

Table materials {
  id int [pk, increment]
  lesson_id int [not null]
  file_name varchar(255) [not null]
  file_type varchar(50) [not null]
  material_type varchar(50) [not null, default: 'document']
  file_url varchar(500) [not null]
  sort_order int [not null, default: 1]
}

Table assignments {
  id int [pk, increment]
  course_id int [not null]
  section_id int [not null]
  title varchar(200) [not null]
  description text
  due_date datetime
  max_score decimal(5,2) [not null, default: 10]
  status varchar(20) [not null, default: 'active']
  assignment_type varchar(20) [not null, default: 'manual']
  questions_json longtext
  auto_grade tinyint [not null, default: 0]
}

Table submissions {
  id int [pk, increment]
  assignment_id int [not null]
  student_id int [not null]
  submitted_at datetime [default: `CURRENT_TIMESTAMP`]
  content longtext
  answers_json longtext
  status varchar(20) [not null, default: 'submitted']
}

Table results {
  id int [pk, increment]
  submission_id int [not null, unique]
  score decimal(5,2)
  feedback text
}

Table learning_progress {
  id int [pk, increment]
  student_id int [not null]
  course_id int [not null]
  completed_lessons int [not null, default: 0]
  completed_assignments int [not null, default: 0]
  completion_rate decimal(5,2) [not null, default: 0]
  status varchar(20) [not null, default: 'in_progress']

  indexes {
    (student_id, course_id) [unique]
  }
}

Table ai_data_sources {
  id int [pk, increment]
  course_id int [not null]
  uploaded_by int [not null]
  file_name varchar(255) [not null]
  file_type varchar(50) [not null]
  status varchar(20) [not null, default: 'pending']
  approved_by int
  approved_at datetime
}

Table ai_conversations {
  id int [pk, increment]
  student_id int [not null]
  course_id int [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table ai_messages {
  id int [pk, increment]
  conversation_id int [not null]
  sender_type varchar(20) [not null]
  content longtext [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Ref: users.role_id > roles.id
Ref: courses.lecturer_id > users.id

Ref: payments.user_id > users.id
Ref: payments.course_id > courses.id

Ref: vouchers.created_by > users.id
Ref: voucher_courses.voucher_id > vouchers.id
Ref: voucher_courses.course_id > courses.id
Ref: voucher_usages.voucher_id > vouchers.id
Ref: voucher_usages.payment_id > payments.id
Ref: voucher_usages.user_id > users.id
Ref: voucher_usages.course_id > courses.id

Ref: enrollments.user_id > users.id
Ref: enrollments.course_id > courses.id
Ref: enrollments.payment_id > payments.id

Ref: course_sections.course_id > courses.id
Ref: lessons.course_id > courses.id
Ref: lessons.section_id > course_sections.id
Ref: materials.lesson_id > lessons.id

Ref: assignments.course_id > courses.id
Ref: assignments.section_id > course_sections.id
Ref: submissions.assignment_id > assignments.id
Ref: submissions.student_id > users.id
Ref: results.submission_id - submissions.id

Ref: learning_progress.student_id > users.id
Ref: learning_progress.course_id > courses.id

Ref: ai_data_sources.course_id > courses.id
Ref: ai_data_sources.uploaded_by > users.id
Ref: ai_data_sources.approved_by > users.id
Ref: ai_conversations.student_id > users.id
Ref: ai_conversations.course_id > courses.id
Ref: ai_messages.conversation_id > ai_conversations.id
